[package]
name = "insort"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.10"
pretty_assertions = "1.3.0"
tempfile = "3.1.0"
